--- a/meu_site/static/css/estilo2.css
+++ b/meu_site/static/css/estilo2.css
@@ -8,6 +8,7 @@
 html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  margin: 0;
 }
 
 
@@ -62,6 +63,7 @@ body{
     word-spacing: normal;
     letter-spacing: normal;
     overflow-wrap: break-word;
+    margin: 0;
 
 }
 
@@ -71,7 +73,14 @@ main{
     border: 1px solid black;
     background-color: #f5f5f5;
     margin-left: 20px;
-   /* min-height: 90vh;*/
+    /*height:100% */
+   
+    
+  
+}
+
+main #notOne{
+  height:100%
 }
 
 aside{
