--- a/meu_site/templates/Teste2.html
+++ b/meu_site/templates/Teste2.html
@@ -1,25 +1,19 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="pt-br">
+
+{% extends 'layout.html' %}
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/estilo2.css' %} ">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=3d">
-    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Deva:wght@100..800&display=swap" rel="stylesheet">
-    <title>🤖Inteligência Artificial</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+
+    <title>
+        {% block title %}
+        🤖Inteligência Artificial
+        {% endblock title %}
+    </title>
+ 
 </head>
 <body>
-     <h1 class="font-effect-shadow-multiple">Teste Dos Conhecimentos Front-End</h1>
-    <div id="simple" class="fon">
+    {% block content %}
+        <h1 class="font-effect-shadow-multiple">Teste Dos Conhecimentos Front-End</h1>
+         <div id="simple" class="fon">
         <main>
              <h2>Conheça O Plano Brasileiro de Inteligência Artificial (PBIA)</h2> 
             <p>Já Está disponível para acesso público a versão final do Plano Brasileiro de Inteligência Artificial (PBIA).
@@ -103,8 +97,9 @@
         </li>
       </ol>
         </aside>
-
-    </div>
+        </div>
+  {% endblock%}
+   
     
 </body>
 </html>
